First version of about page and started work on contact us

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,12 @@
      <link href="
 https://cdn.jsdelivr.net/npm/material-icons@1.13.6/iconfont/material-icons.min.css
 " rel="stylesheet">
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.collapsible');
+      var instances = M.Collapsible.init(elems);
+    });
+    </script>
     <title>React App</title>
   </head>
   <body>
