--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@ var instance = M.Collapsible.init(elem, {
 });
     });
     </script>
-    <title>React App</title>
+    <title>BookIT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
