--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
      <!-- The materialized icons -->
      <link href="
@@ -31,4 +32,9 @@ https://cdn.jsdelivr.net/npm/material-icons@1.13.6/iconfont/material-icons.min.c
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script>
+    $(document).ready(function() {
+  $('.collapsible').collapsible();
+})
+  </script>
 </html>
